--- a/src/App.css
+++ b/src/App.css
@@ -78,12 +78,13 @@
   }
 
   .popup {
-    background-color: #fff;
+    background-color: #b0703c;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     position: relative;
-    opacity: 0.7;
+    opacity: 0.8;
     transition: transform 0.5s ease-in-out;
+    border-radius: 10px
   }
 
   .popup-container:hover .popup {
